<resources>
    <string name="app_name">MyMovieApp</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">Tv Shows</string>
    <string name="now_playing">Now Playing</string>
    <string name="latest">Latest</string>
    <string name="language">en-US</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="menu_setting">Setting (Language)</string>
    <string name="menu_profile">My Profile</string>
    <string name="my_name">Ade Yudys Triawan</string>
    <string name="my_email">yudistriawan@gmail.com</string>
    <string name="my_favorite">My Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="airing_today">Airing Today</string>
    <string name="on_the_air">On The Air</string>
    <string name="menu_home">Home</string>
    <string name="details_movie">Details Movie</string>
    <string name="details_tv">Details TV</string>
    <string name="no_data">No Data</string>
    <string name="message_add_favorite">Add to Favorite</string>
    <string name="message_remove_favorite">Remove from Favorite</string>
</resources>
